--- a/Register.html
+++ b/Register.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="/styles/Register.css">
+    <link rel="stylesheet" href="Register.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <span id="head">
             <h2>Register With Us</h2>
         </span>
-        <form action="/Pages/login.html" id="form">
+        <form action="login.html" id="form">
             <section>
                 <label for="">Username</label> <br>
                 <input type="text" id="username" placeholder="Enter Username">
@@ -51,7 +51,8 @@
 
     <div class="endpoint"></div>
 
-    <script src="/Js/Register.js"></script>
+    <script src="Register.js"></script>
+
 </body>
 
 </html>
