--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/styles/login.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
             </form>
         </section>
     </div>
-    <script src="/Js/login.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
