--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="Register.css">
+    <script src="https://kit.fontawesome.com/87a66ec4e9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="box">
         <span id="head">
             <h2>Register With Us</h2>
+            <i class="fa-sharp fa-solid fa-bug"><p>fill the inputs</p></i>
         </span>
         <form action="login.html" id="form">
             <section>
