--- a/login.html
+++ b/login.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
+    <script src="https://kit.fontawesome.com/87a66ec4e9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="container">
-        <span id="header"><h2>Welcome Back</h2></span>
+        <span id="header"><h2>Welcome Back</h2>
+            <i class="fa-sharp fa-solid fa-bug"><p>fill the inputs</p></i></span>
         <section>
             <form action="/Pages/Register.html">
                 <section>
