--- a/Index.file/index.html
+++ b/Index.file/index.html
@@ -53,7 +53,7 @@
 
     <div class="endpoint"></div>
 
-    <script src="Register.js"></script>
+    <script type="module" src="Register.js"></script>
 
 </body>
 
