--- a/index/index.html
+++ b/index/index.html
@@ -53,7 +53,7 @@
 
     <div class="endpoint"></div>
 
-    <script type="module" src="/script file/Register.js"></script>
+    <script src="/script file/Register.js" type="module"></script>
 
 </body>
 
