--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="/style.css/Register.css">
+    <link rel="stylesheet" href="Register.css">
     <script src="https://kit.fontawesome.com/87a66ec4e9.js" crossorigin="anonymous"></script>
 </head>
 
@@ -53,7 +53,7 @@
 
     <div class="endpoint"></div>
 
-    <script src="/script file/Register.js" type="module"></script>
+    <script src="Register.js" type="module"></script>
 
 </body>
 
