--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/style.css/login.css">
+    <link rel="stylesheet" href="login.css">
     <script src="https://kit.fontawesome.com/87a66ec4e9.js" crossorigin="anonymous"></script>
 </head>
 
@@ -35,7 +35,7 @@
             </form>
         </section>
     </div>
-    <script src="/script file/login.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
