--- a/index/index.html
+++ b/index/index.html
@@ -53,7 +53,7 @@
 
     <div class="endpoint"></div>
 
-    <script src="../script file/Register.js" type="module"></script>
+    <script type="module" src="../script/Register.js"></script>
 
 </body>
 
