--- a/index/login.html
+++ b/index/login.html
@@ -35,7 +35,7 @@
             </form>
         </section>
     </div>
-    <script src="../script file/login.js"></script>
+    <script src="../script/login.js"></script>
 </body>
 
 </html>
